--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,7 +15,7 @@ a {
   border-bottom: 1px solid rgba(0,0,0,.2);
 }
 #home-quote {
-  background-image: url('../img/bg-quote.jpg') center center;
+  background-image: url("../img/bg-quote.jpg") center center;
   background-size: cover;
 
 }
