--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,7 +14,7 @@ a {
 .pergunta {
   border-bottom: 1px solid rgba(0,0,0,.2);
 }
-#home-quote {
+.home-quote {
   background-image: url("../img/bg-quote.jpg") center center;
   background-size: cover;
 
