--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,9 +15,8 @@ a {
   border-bottom: 1px solid rgba(0,0,0,.2);
 }
 .home-quote {
-  background-image: url("../img/bg-quote.jpg") center center;
+  background: url(../img/bg-quote.jpg) center center;
   background-size: cover;
-
 }
 @media (max-width: 767px) {
   body {
